--- a/memory_game_iam.html
+++ b/memory_game_iam.html
@@ -218,14 +218,14 @@
 
     <script>
         const cardsArray = [
-            'torchie_flag.png',
-            'torchie_flag.png',
-            'torchie_heart.png',
-            'torchie_heart.png',
-            'torchie_laugh.png',
-            'torchie_laugh.png',
-            'torchie_sunglasses.png',
-            'torchie_sunglasses.png',
+            'img1.png',
+            'img1.png',
+            'img2.png',
+            'img2.png',
+            'img3.png',
+            'img3.png',
+            'img4.png',
+            'img4.png',
         ];
 
         const gameBoard = document.querySelector('.memory-game');
