add scratch off

--- a/scratch-off/index.html
+++ b/scratch-off/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
 </head>
 <body>
-
     <div id="container">
         <img id="backImage" src="back.png" alt="Back Image">
+        <img id="frontImage" src="front.png" alt="Front Image">
         <canvas id="scratchCanvas"></canvas>
     </div>
+    <a id="closeButton" href="#" onclick="appboyBridge.closeMessage()">Close</a>
 
     <script src="script.js"></script> <!-- Link to JavaScript file -->
 </body>
