add font instructions

--- a/scratch-off/index.html
+++ b/scratch-off/index.html
@@ -13,7 +13,8 @@
         <canvas id="scratchCanvas"></canvas>
     </div>
     <a id="closeButton" href="#" onclick="appboyBridge.closeMessage()">Close</a>
-    <!-- <script>
+    <!-- 
+    <script>
         // Load the custom font
         const fontName = 'CustomFont';
         const fontUrl = 'url(custom-font.woff)';
@@ -26,7 +27,8 @@
         }).catch(function(error) {
             console.error('Font failed to load:', error);
         });
-    </script> -->
+    </script> 
+    -->
     <script src="script.js"></script> <!-- Link to JavaScript file -->
 </body>
 </html>
