increase scratch off radiu

--- a/scratch-off/index.html
+++ b/scratch-off/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <img id="backImage" src="back.png" alt="Back Image">
+        <img id="revealImage" src="reveal.png" alt="Reveal Image">
         <img id="frontImage" src="front.png" alt="Front Image">
         <canvas id="scratchCanvas"></canvas>
     </div>
